more glvnd adjustments
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/381@7398 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libglvnd0-nvidia.lintian-overrides.in
+++ b/debian/libglvnd0-nvidia.lintian-overrides.in
@@ -5,7 +5,5 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# These are built from src:libglvnd and packaged independently
-# from the NVIDIA drivers, too.
+# This is also built from src:libglvnd.
 package-name-doesnt-match-sonames libGLdispatch0
-symbols-declares-dependency-on-other-package libglvnd0
