--- a/debian/control
+++ b/debian/control
@@ -439,15 +439,20 @@ Description: NVIDIA binary EGL library${nvidia:LegacyDesc}
 Package: libgles1-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Breaks:
- libgles1-nvidia (<< 361),
-Replaces:
- libgles1-nvidia (<< 361),
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
+Conflicts:
+ libgles1,
+Breaks:
+ libgles1-nvidia (<< 361),
+Replaces:
+ libgles1,
+ libgles1-nvidia (<< 361),
+Provides:
+ libgles1,
 Description: NVIDIA binary OpenGL|ES 1.x GLVND stub library
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
@@ -515,15 +520,20 @@ Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
 Package: libgles2-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Breaks:
- libgles2-nvidia (<< 361),
-Replaces:
- libgles2-nvidia (<< 361),
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
+Conflicts:
+ libgles2,
+Breaks:
+ libgles2-nvidia (<< 361),
+Replaces:
+ libgles2,
+ libgles2-nvidia (<< 361),
+Provides:
+ libgles2,
 Description: NVIDIA binary OpenGL|ES 2.x GLVND stub library
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
