explicitly use interest-await triggers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7403 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -245,6 +245,7 @@ Package: nvidia-alternative
 Architecture: i386 amd64
 Multi-Arch: foreign
 Pre-Depends:
+ dpkg (>= 1.17.21),
  ${nvidia:legacy-check},
 Depends:
  glx-alternative-nvidia (>= 0.7),
