PREEMPT_RT is unsupported upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340-stretch@7421 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/build-module-packages.sh.in
+++ b/debian/build-module-packages.sh.in
@@ -8,6 +8,9 @@ kernels=
 slenrek=
 for k in $(ls -dvr1 /lib/modules/*/build 2>/dev/null | cut -d/ -f4) ; do
 	case $k in
+		*-rt-*)
+			: # skip PREEMPT_RT kernel
+			;;
 		*)
 			kernels="$kernels $k"
 			slenrek="$k $slenrek"
