allow overriding the unsupported devices for debugging purposes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7453 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-legacy-check.preinst.in
+++ b/debian/nvidia-legacy-check.preinst.in
@@ -270,6 +270,11 @@ fi
 
 find_unsupported_gpus()
 {
+	if [ -n "$OVERRIDE_NVIDIA_LEGACY_CHECK_UNSUPPORTED_DEVICES" ]; then
+		echo "$OVERRIDE_NVIDIA_LEGACY_CHECK_UNSUPPORTED_DEVICES"
+		return
+	fi
+
 	# Check for GPUs that are only supported up to $LEGACY_DRIVER
 	if lspci --version > /dev/null 2>&1; then
 		lspci -mn \
