provide libglx-vendor, libegl-vendor for libglvnd compatibility
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7459 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -260,6 +260,8 @@ Depends:
  libglx0 | libglx0-glvnd-nvidia,
  lib${nvidia}-glcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
+Provides:
+ libglx-vendor,
 Description: NVIDIA binary GLX library${nvidia:LegacyDesc}
  GLX ("OpenGL Extension to the X Window System") provides an interface between
  OpenGL and the X Window System as well as extensions to OpenGL itself.
@@ -649,6 +651,7 @@ Depends:
 Enhances:
  libegl1,
 Provides:
+ libegl-vendor,
  egl-icd,
 Description: NVIDIA EGL installable client driver (ICD)
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
