--- a/debian/control
+++ b/debian/control
@@ -282,12 +282,12 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libgl1,
+# libgl1 (= 0.2.999),
 Conflicts:
- libgl1,
+ libgl1 (>> 0),
  libgl1-${nvidia}-glx,
 Replaces:
- libgl1,
+ libgl1 (>> 0),
  libgl1-${nvidia}-glx,
 Description: Vendor neutral GL dispatch library -- libGL
  This is an implementation of the vendor-neutral dispatch layer for
@@ -301,7 +301,7 @@ Package: libgl1-nvidia-glvnd-glx
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
- libgl1 | libgl1-glvnd-nvidia-glx,
+ libgl1 (>= 0.2.999) | libgl1-glvnd-nvidia-glx,
  libglx-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Provides:
@@ -386,12 +386,12 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libegl1,
+# libegl1 (= 0.2.999),
 Conflicts:
- libegl1,
+ libegl1 (>> 0),
  libegl1-${nvidia},
 Replaces:
- libegl1,
+ libegl1 (>> 0),
  libegl1-${nvidia},
 Description: Vendor neutral GL dispatch library -- libEGL
  This is an implementation of the vendor-neutral dispatch layer for
@@ -447,13 +447,13 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libgles1,
+# libgles1 (= 0.2.999),
 Conflicts:
- libgles1,
+ libgles1 (>> 0),
 Breaks:
  libgles1-nvidia (<< 361),
 Replaces:
- libgles1,
+ libgles1 (>> 0),
  libgles1-nvidia (<< 361),
 Description: NVIDIA binary OpenGL|ES 1.x GLVND stub library
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
@@ -501,7 +501,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
- libgles1 | libgles1-glvnd-nvidia,
+ libgles1 (>= 0.2.999) | libgles1-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
@@ -528,13 +528,13 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libgles2,
+# libgles2 (= 0.2.999),
 Conflicts:
- libgles2,
+ libgles2 (>> 0),
 Breaks:
  libgles2-nvidia (<< 361),
 Replaces:
- libgles2,
+ libgles2 (>> 0),
  libgles2-nvidia (<< 361),
 Description: NVIDIA binary OpenGL|ES 2.x GLVND stub library
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
@@ -584,7 +584,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
- libgles2 | libgles2-glvnd-nvidia,
+ libgles2 (>= 0.2.999) | libgles2-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:LegacyDesc}
@@ -647,7 +647,7 @@ Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
  nvidia-egl-common,
- libegl1 | libegl1-glvnd-nvidia,
+ libegl1 (>= 0.2.999) | libegl1-glvnd-nvidia,
  libegl-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Enhances:
