use versioned Breaks instead of Conflicts
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7482 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -284,8 +284,9 @@ Depends:
 Provides:
 # libgl1 (= 0.2.999),
 Conflicts:
- libgl1 (>> 0),
  libgl1-${nvidia}-glx,
+Breaks:
+ libgl1 (>> 0),
 Replaces:
  libgl1 (>> 0),
  libgl1-${nvidia}-glx,
@@ -388,8 +389,9 @@ Depends:
 Provides:
 # libegl1 (= 0.2.999),
 Conflicts:
- libegl1 (>> 0),
  libegl1-${nvidia},
+Breaks:
+ libegl1 (>> 0),
 Replaces:
  libegl1 (>> 0),
  libegl1-${nvidia},
@@ -448,9 +450,8 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
 # libgles1 (= 0.2.999),
-Conflicts:
- libgles1 (>> 0),
 Breaks:
+ libgles1 (>> 0),
  libgles1-nvidia (<< 361),
 Replaces:
  libgles1 (>> 0),
@@ -529,9 +530,8 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
 # libgles2 (= 0.2.999),
-Conflicts:
- libgles2 (>> 0),
 Breaks:
+ libgles2 (>> 0),
  libgles2-nvidia (<< 361),
 Replaces:
  libgles2 (>> 0),
