fix broken symlink
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/384@7504 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-ptxjitcompiler1.links.in
+++ b/debian/libnvidia-ptxjitcompiler1.links.in
@@ -1,1 +1,1 @@
-LIBDIR#/#PRIVATE#/libnvidia-ptxjitcompiler.so.#VERSION#   #LIBDIR#/#PRIVATE#/libnvidia-ptxjitcompiler.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-ptxjitcompiler.so.#VERSION#   #LIBDIR#/#PRIVATE#/libnvidia-ptxjitcompiler.so.1
