simplify upstream changelog handling
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7513 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -80,6 +80,9 @@ xorg_depends	+= $(comma) xserver-xorg-core $(XORG_BOUND)
 xorg_depends	+= $(comma) xserver-xorg-legacy | xserver-xorg-core (<< 2:1.18)
 xorg_provides	 = xorg-driver-video
 
+# Use the amd64 changelog for all architectures to be M-A:same safe.
+upstream_changelog	 = NVIDIA-Linux-amd64/NVIDIA_Changelog
+
 
 .PHONY: autogen prepare patch
 autogen: $(AUTOGEN)
@@ -158,7 +161,6 @@ install-into-tmp:
 	cp -al NVIDIA-Linux/ debian/tmp
 	rm -rf debian/tmp/32
 	rm -f debian/tmp/NVIDIA_Changelog
-	cp -al NVIDIA-Linux-amd64/NVIDIA_Changelog debian/tmp/
 	gzip -9fn debian/tmp/nvidia-smi.1
 
 build-kernel-source-tree: install-into-tmp
@@ -167,7 +169,7 @@ build-kernel-source-tree: install-into-tmp
 	mv debian/tmp/kernel/* $(module_source)/
 	# This copy of the changelog is going to be installed into the module
 	# binary packages.
-	cp -a debian/tmp/NVIDIA_Changelog $(module_source)/
+	cp -al $(upstream_changelog) $(module_source)/
 
 	# We only want Kbuild.
 	rm -f $(module_source)/makefile
@@ -220,7 +222,7 @@ kernel-source-tree: prepare build-kernel-source-tree
 	cd $@ && QUILT_PATCHES=../debian/module/debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2
 
 override_dh_installchangelogs:
-	dh_installchangelogs debian/tmp/NVIDIA_Changelog
+	dh_installchangelogs $(upstream_changelog)
 
 override_dh_dkms:
 	dh_dkms -V $(version)
