Add nvidia-drm-crtc.patch to fix build with 4.14, closes 878160
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7521 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,7 @@
 # kernel support
 do-div-cast.patch
 nvidia-drm-master-dev.patch
+nvidia-drm-crtc.patch
 
 # build system updates
 use-kbuild-compiler.patch
