Add nvidia-drm-pci-init.patch to fix build on Linux 4.14
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7544 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,7 @@
 # kernel support
 unregister_procfs_on_failure.patch
 vm-fault.patch
+nvidia-drm-pci-init.patch
 
 # build system updates
 separate-makefile-kbuild.patch
