provide libglvnd package names, mesa 17.x is now in testing
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7568 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -282,7 +282,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
-# libgl1 (= 0.2.999),
+ libgl1 (= 0.2.999),
 Conflicts:
  libgl1-${nvidia}-glx,
 Breaks:
@@ -387,7 +387,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
-# libegl1 (= 0.2.999),
+ libegl1 (= 0.2.999),
 Conflicts:
  libegl1-${nvidia},
 Breaks:
@@ -449,7 +449,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
-# libgles1 (= 0.2.999),
+ libgles1 (= 0.2.999),
 Breaks:
  libgles1 (>> 0),
  libgles1-nvidia (<< 361),
@@ -528,7 +528,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
-# libgles2 (= 0.2.999),
+ libgles2 (= 0.2.999),
 Breaks:
  libgles2 (>> 0),
  libgles2-nvidia (<< 361),
