do not provide libglvnd package names with missing symbols
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7569 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -190,7 +190,7 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libglvnd0,
+# libglvnd0,
  glvnd-nvidia-abi-375.20,
 Conflicts:
  libglvnd0,
@@ -237,7 +237,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libglx0,
+# libglx0,
 Conflicts:
  libglx0,
 Replaces:
@@ -387,7 +387,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Provides:
- libegl1 (= 0.2.999),
+# libegl1 (= 0.2.999),
 Conflicts:
  libegl1-${nvidia},
 Breaks:
