update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7570 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libegl1-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libegl1-glvnd-nvidia.lintian-overrides.in
@@ -6,7 +6,7 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Packages built against the NVIDIA libGL should declare dependencies on
+# Packages built against the NVIDIA libEGL should declare dependencies on
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libegl1 (*)
 symbols-declares-dependency-on-other-package libegl1-mesa
