--- a/debian/libgles1-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libgles1-glvnd-nvidia.lintian-overrides.in
@@ -5,9 +5,9 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Packages built against the NVIDIA libGL should declare dependencies on
+# Packages built against the NVIDIA libGLES should declare dependencies on
 # the free version for Debian's purposes.
-symbols-declares-dependency-on-other-package libgles1 (*)
+#symbols-declares-dependency-on-other-package libgles1 (*)
 symbols-declares-dependency-on-other-package libgles1-mesa
 
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
