--- a/debian/libglvnd0-nvidia.lintian-overrides.in
+++ b/debian/libglvnd0-nvidia.lintian-overrides.in
@@ -7,3 +7,7 @@ hardening-no-stackprotector
 
 # This is also built from src:libglvnd.
 package-name-doesnt-match-sonames libGLdispatch0
+
+# Packages built against the NVIDIA libglvnd should declare dependencies on
+# the free version for Debian's purposes.
+symbols-declares-dependency-on-other-package libglvnd0
