--- a/debian/libglx0-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libglx0-glvnd-nvidia.lintian-overrides.in
@@ -8,3 +8,7 @@ hardening-no-stackprotector
 
 # This is also built from src:libglvnd.
 package-name-doesnt-match-sonames libGLX0
+
+# Packages built against the NVIDIA libGLX should declare dependencies on
+# the free version for Debian's purposes.
+symbols-declares-dependency-on-other-package libglx0
