--- a/debian/libegl1-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libegl1-glvnd-nvidia.lintian-overrides.in
@@ -11,5 +11,8 @@ hardening-no-stackprotector
 symbols-declares-dependency-on-other-package libegl1 (*)
 symbols-declares-dependency-on-other-package libegl1-mesa
 
+# Do not conflict with the virtual package from src:mesa (<< 17).
+conflicts-with-version libegl1 (>> 0)
+
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
