--- a/debian/libgles1-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libgles1-glvnd-nvidia.lintian-overrides.in
@@ -10,5 +10,8 @@ hardening-no-stackprotector
 #symbols-declares-dependency-on-other-package libgles1 (*)
 symbols-declares-dependency-on-other-package libgles1-mesa
 
+# Do not conflict with the virtual package from src:mesa (<< 17).
+conflicts-with-version libgles1 (>> 0)
+
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
