switch most URLs to https://
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7593 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -1,5 +1,5 @@
 #!/bin/bash
-# Based on http://wiki.debian.org/NvidiaGraphicsDrivers?action=AttachFile&do=view&target=nvidia-versions.sh
+# Based on https://wiki.debian.org/NvidiaGraphicsDrivers?action=AttachFile&do=view&target=nvidia-versions.sh
 #
 # Copyright © 2008-2011 Filipus Klutiero <chealer@gmail.com>
 # Copyright © 2011-2014 Andreas Beckmann <anbe@debian.org>
@@ -15,7 +15,7 @@
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with this program. If not, see <http://www.gnu.org/licenses/>
+# along with this program. If not, see <https://www.gnu.org/licenses/>
 #
 
 if [ "$1" = "-h" -o "$1" = "--help" ]; then
