--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends:
  libxvmc1,
  quilt,
 Standards-Version: 3.9.8
-Homepage: http://www.nvidia.com
+Homepage: https://www.nvidia.com
 XS-Autobuild: yes
 
 #Package: nvidia-glx${nvidia:Legacy}
@@ -452,7 +452,7 @@ Provides:
  libcuda1-i386 [i386],
  libcuda-5.0-1,
  libcuda-5.0-1-i386 [i386],
-Homepage: http://www.nvidia.com/CUDA
+Homepage: https://www.nvidia.com/CUDA
 Description: NVIDIA CUDA Driver Library${nvidia:LegacyDesc}
  .
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -479,7 +479,7 @@ Recommends:
  libcuda1-i386,
 Replaces:
  nvidia-glx-ia32 (<< 185.18.14-2),
-Homepage: http://www.nvidia.com/CUDA
+Homepage: https://www.nvidia.com/CUDA
 Description: please switch to multiarch libcuda1:i386
  This is an empty transitional package to aid switching to multiarch.
  .
@@ -558,7 +558,7 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Breaks:
  ${nvidia}-smi (<< ${nvidia:Version}),
-Homepage: http://developer.nvidia.com/nvidia-management-library-NVML
+Homepage: https://developer.nvidia.com/nvidia-management-library-NVML
 Description: NVIDIA Management Library (NVML) runtime library${nvidia:LegacyDesc}
  The NVIDIA Management Library (NVML) provides a monitoring and management API.
  It provides a direct access to the queries and commands exposed via nvidia-smi.
