--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
 Build-Depends: debhelper (>= 8), quilt (>= 0.46-7~)
 Standards-Version: 3.9.8
-Homepage: http://www.nvidia.com/
+Homepage: https://www.nvidia.com/
 
 Package: #NVIDIA#-kernel-#KVERS#
 Architecture: #ARCH_LIST#
