add dummy override
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7606 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libopengl0-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libopengl0-glvnd-nvidia.lintian-overrides.in
@@ -7,3 +7,7 @@ hardening-no-stackprotector
 
 # This is also built from src:libglvnd.
 package-name-doesnt-match-sonames libOpenGL0
+
+# Packages built against the NVIDIA libOpenGL should declare dependencies on
+# the free version for Debian's purposes.
+#symbols-declares-dependency-on-other-package libopengl0
